--- a/Cognizant.CodeChallenge.Infrasturcture.Database/Application.CodeChallenge.Infrastructure.Database.csproj
+++ b/Cognizant.CodeChallenge.Infrasturcture.Database/Application.CodeChallenge.Infrastructure.Database.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Cognizant.CodeChallenge.Infrastructure.Database</RootNamespace>
-    <AssemblyName>Cognizant.CodeChallenge.Infrastructure.Database</AssemblyName>
+    <RootNamespace>Application.CodeChallenge.Infrastructure.Database</RootNamespace>
+    <AssemblyName>Application.CodeChallenge.Infrastructure.Database</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Cognizant.CodeChallenge.Domain\Cognizant.CodeChallenge.Domain.csproj" />
+    <ProjectReference Include="..\Cognizant.CodeChallenge.Domain\Application.CodeChallenge.Domain.csproj" />
   </ItemGroup>
 
 </Project>
